# Geology

./: .gitignore  10-3-2025 run of PnwRotPlugin.txt  BaseQGISProject - YHS2.qgz  BaseQGISProject.qgz  build.bat
FileOrg/my_application/: app.py
FileOrg/src/: utils.py
PNW-Rotation1/: CMakeLists.txt  QgisProject.qgz  QgisProject2.qgz  gaussNewton2D.cpp  main.cpp
PNW-Rotation1/data/: nshm2023_wus_v1.txt
PnwRotPlugin/: CMakeLists.txt  QgisProject.qgz  README.md  copyPlugin.bat
PnwRotPlugin/data/: PnwRotTest.qlr
PnwRotPlugin/src/: CMakeLists.txt  pnwRotPlugin.cpp  pnwRotPlugin.h
Python Plugin/: pycharm_qgis.bat
Python Plugin/lat_long_calc/: README.html  README.txt  __init__.py  lat_long_calc.py  lat_long_calc_dialog.py  lat_long_calc_dialog_base.ui  metadata.txt  resources.py
data/: nshm2023_GPS_Layer.qlr
pnw_rotation_py/: README.html  README.txt  __init__.py  geoHelper.py  geo_helper.py  geo_whiteboard.py  jdf_plate.py  metadata.txt  plate_motion.py  pnw_rotation_py.py  pnw_rotation_py_dialog.py  pnw_rotation_py_dialog_base.ui  pyproject.toml  resources.py  resources.qrc  rot_data.py  rotation_regression_test.py  test.bat  test.py  testGPSvsGeoMag.py  testPoleRotation.py  test_pass_runs.py  yhs_run.xlsx
pnw_rotation_py/data/: Large paleo rot set.csv  Unit,Sub-unitSite,Age_Ma,Rotation_d.csv  WellsSimpson2001.csv  testData.csv  testData2.xlsx  testDataEdited.csv
pnw_rotation_py/src/: __init__py  calculator.py  euler_kinematics.py  gauss_newton.py  geo_helper.py  load_gps_data.py  test_utils.py
pnw_rotation_py/src/euler_pole/: euler_kinematics.py  euler_pole_regression.py  euler_pole_regression2.py
pnw_rotation_py/tests/: config_root.py  euler_kinematics.py  euler_pole_tests.py  rotation_regression_test.py  test.bat  test.py  testGPSvsGeoMag.py  testPoleRotation.py  test_base.py  test_calculator.py  test_euler_kinematics.py  test_gauss_newton.py
(+2 files in other folders)
